--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,12 @@
 	],
 	"game": [
 		"bin-debug/AssetAdapter.js",
+		"bin-debug/GlobalConfig.js",
 		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
-		"bin-debug/ThemeAdapter.js"
+		"bin-debug/StartPanel.js",
+		"bin-debug/ThemeAdapter.js",
+		"bin-debug/Util.js"
 	]
 }
