--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,25 @@
 		"libs/modules/promise/promise.js"
 	],
 	"game": [
+		"bin-debug/framework/scenesystem/IScene.js",
 		"bin-debug/AssetAdapter.js",
-		"bin-debug/GlobalConfig.js",
-		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
-		"bin-debug/StartPanel.js",
 		"bin-debug/ThemeAdapter.js",
-		"bin-debug/Util.js"
+		"bin-debug/common/MySet.js",
+		"bin-debug/common/ResAsyncLoadManager.js",
+		"bin-debug/common/Util.js",
+		"bin-debug/framework/GameRoot.js",
+		"bin-debug/framework/LayerManager.js",
+		"bin-debug/GlobalConfig.js",
+		"bin-debug/framework/scenesystem/SceneManager.js",
+		"bin-debug/global/MessageManager.js",
+		"bin-debug/global/define/MessageType.js",
+		"bin-debug/global/util/L2Filters.js",
+		"bin-debug/global/util/LongTouchUtil.js",
+		"bin-debug/global/util/ToastInfo.js",
+		"bin-debug/scenes/mainscene/MainScene.js",
+		"bin-debug/UI/LoadingUI.js",
+		"bin-debug/UI/StartPanel.js"
 	]
 }
