--- a/manifest.json
+++ b/manifest.json
@@ -9,24 +9,28 @@
 	],
 	"game": [
 		"bin-debug/framework/scenesystem/IScene.js",
-		"bin-debug/AssetAdapter.js",
+		"bin-debug/framework/MessageManager.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
 		"bin-debug/ThemeAdapter.js",
+		"bin-debug/common/L2Filters.js",
 		"bin-debug/common/MySet.js",
 		"bin-debug/common/ResAsyncLoadManager.js",
+		"bin-debug/common/ToastInfo.js",
 		"bin-debug/common/Util.js",
 		"bin-debug/framework/GameRoot.js",
 		"bin-debug/framework/LayerManager.js",
 		"bin-debug/GlobalConfig.js",
+		"bin-debug/framework/define/ColorDefine.js",
+		"bin-debug/framework/define/MessageType.js",
+		"bin-debug/AssetAdapter.js",
 		"bin-debug/framework/scenesystem/SceneManager.js",
-		"bin-debug/global/MessageManager.js",
-		"bin-debug/global/define/MessageType.js",
-		"bin-debug/global/util/L2Filters.js",
-		"bin-debug/global/util/LongTouchUtil.js",
-		"bin-debug/global/util/ToastInfo.js",
-		"bin-debug/scenes/mainscene/MainScene.js",
+		"bin-debug/scene/MainScene.js",
+		"bin-debug/scene/StartScene.js",
+		"bin-debug/scene/l1/L1MainScene.js",
+		"bin-debug/UI/L1MainUI.js",
 		"bin-debug/UI/LoadingUI.js",
+		"bin-debug/UI/MainUI.js",
 		"bin-debug/UI/StartPanel.js"
 	]
 }
