--- a/manifest.json
+++ b/manifest.json
@@ -9,28 +9,33 @@
 	],
 	"game": [
 		"bin-debug/framework/scenesystem/IScene.js",
-		"bin-debug/framework/MessageManager.js",
+		"bin-debug/framework/define/MessageType.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
 		"bin-debug/ThemeAdapter.js",
 		"bin-debug/common/L2Filters.js",
 		"bin-debug/common/MySet.js",
-		"bin-debug/common/ResAsyncLoadManager.js",
+		"bin-debug/common/ResAsyncLoader.js",
 		"bin-debug/common/ToastInfo.js",
 		"bin-debug/common/Util.js",
 		"bin-debug/framework/GameRoot.js",
 		"bin-debug/framework/LayerManager.js",
-		"bin-debug/GlobalConfig.js",
+		"bin-debug/framework/MessageManager.js",
 		"bin-debug/framework/define/ColorDefine.js",
-		"bin-debug/framework/define/MessageType.js",
+		"bin-debug/GlobalConfig.js",
 		"bin-debug/AssetAdapter.js",
 		"bin-debug/framework/scenesystem/SceneManager.js",
 		"bin-debug/scene/MainScene.js",
 		"bin-debug/scene/StartScene.js",
+		"bin-debug/scene/l1/L1Char.js",
+		"bin-debug/scene/l1/L1CharPortr.js",
 		"bin-debug/scene/l1/L1MainScene.js",
-		"bin-debug/UI/L1MainUI.js",
+		"bin-debug/scene/l1/L1MainStoryScene.js",
+		"bin-debug/scene/l1/L1RoughlikeScene.js",
 		"bin-debug/UI/LoadingUI.js",
 		"bin-debug/UI/MainUI.js",
-		"bin-debug/UI/StartPanel.js"
+		"bin-debug/UI/StartPanel.js",
+		"bin-debug/UI/l1/L1MainStorySceneUI.js",
+		"bin-debug/UI/l1/L1MainUI.js"
 	]
 }
